syntax = "proto3";
option csharp_namespace = "SimpleSchedulerBlazor.ProtocolBuffers.Services";
package SimpleSchedulerBlazorProtocolBuffers;

import "messages.workers.proto";

service WorkersService {
	rpc CreateWorker (CreateWorkerRequest) returns (CreateWorkerReply);
	rpc DeleteWorker (DeleteWorkerRequest) returns (DeleteWorkerReply);
	rpc GetAllWorkers (GetAllWorkersRequest) returns (GetAllWorkersReply);
	rpc GetWorker (GetWorkerRequest) returns (GetWorkerReply);
	rpc ReactivateWorker (ReactivateWorkerRequest) returns (ReactivateWorkerReply);
	rpc RunNow (RunNowRequest) returns (RunNowReply);
	rpc UpdateWorker (UpdateWorkerRequest) returns (UpdateWorkerReply);
}
